--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ clone_folder: c:\projects\frightenstone
 install:
     - cmd: >-
         git submodule update --init --recursive
+        echo vs2017 | call winsolution_build.bat 0
         
 image: Visual Studio 2017
 configuration: 
@@ -27,7 +28,7 @@ for:
 
 build:
     verbosity: normal
-    project: sln\windows\frightenstone\frightenstone.sln
+    project: build\vs2017\Frightenstone_vs2017.sln
     
 notifications:
 - provider: Email
