--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ install:
 
 script:
     - sudo chmod 777 *.sh
-    - ./necessarysoft.sh
-    - ./runfirstly_scripts.sh debug
+    - ./config_env.sh
     - ./linuxmakefile_build.sh
     - cd ./build/gmake
     - make clean;make
