【frame】优化ci邮件通知，windows下crash会把剩余的日志都着盘

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ notifications:
         recipients:
             - 120453674@qq.com # ericyonng
         on_success: change
-        on_failure: always
+        on_failure: change
