【frame】兼容低配机器

--- a/Service/Cfgs/TestSuit.ini
+++ b/Service/Cfgs/TestSuit.ini
@@ -17,7 +17,7 @@ ip=Any
 port=4567
 
 [CommonCfg]
-MaxSessionQuantity=100064
+MaxSessionQuantity=64
 TransferQuantity=1
 DispatcherQuantity=1
 ServiceNodePort=5000
@@ -27,8 +27,8 @@ MemoryMonitorIntervalSecconds=10
 
 [Dispatcher]
 HeartbeatDeadTimeInterval=15000
-PreparePoolBufferCnt=1024
-MaxMemPoolMBPerDispatcher=1024
+PreparePoolBufferCnt=8
+MaxMemPoolMBPerDispatcher=8
 DispatecherResolutionInterval=1
 LogicServiceId=1
 
@@ -36,7 +36,7 @@ LogicServiceId=1
 ConnectTimeOutMs=15000
 
 [ObjPool]
-MaxAllowMBOccupied=2048
+MaxAllowMBOccupied=16
 
 [MemoryPool]
-MaxAllowMBOccupied=2048
+MaxAllowMBOccupied=16
