--- a/Service/Cfgs/FS_MyClient.ini
+++ b/Service/Cfgs/FS_MyClient.ini
@@ -17,7 +17,7 @@ ip=Any
 port=5000
 
 [CommonCfg]
-MaxSessionQuantity=100064
+MaxSessionQuantity=164
 TransferQuantity=1
 DispatcherQuantity=1
 ServiceNodePort=5000
