--- a/Service/Cfgs/FS_MyClient_debug.ini
+++ b/Service/Cfgs/FS_MyClient_debug.ini
@@ -42,7 +42,8 @@ MaxAllowMBOccupied=2048
 MaxAllowMBOccupied=2048
 
 [ClientCfgSeg]
-TargetIp=119.28.177.97
+;TargetIp=119.28.177.97
+TargetIp=127.0.0.1
 TargetPort=4567
 ClientQuantity=1
 MsgNumPerPeriod=1
