--- a/Service/Cfgs/TestSuit_debug.ini
+++ b/Service/Cfgs/TestSuit_debug.ini
@@ -17,7 +17,7 @@ ip=Any
 port=4567
 
 [CommonCfg]
-MaxSessionQuantity=64
+MaxSessionQuantity=100064
 TransferQuantity=1
 DispatcherQuantity=1
 ServiceNodePort=5000
